--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,24 +91,34 @@ jobs:
             cd backend
             npm run test
             
-#   scan-frontend:
-#     docker:
-#       - image: circleci/node:13.8.0
-#     steps:
-#       - checkout
-#       - restore_cache:
-#           keys: [frontend-build]
-#       - run:
-#           name: Update dependencies
-#           command: |
-#             cd frontend
-#             npm install
-#       - run:
-#           name: Analyze front-end
-#           command: |
-#             cd frontend
-#             npm update
-#             npm audit fix --audit-level=critical --force
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Analyze front-end
+          command: |
+            cd frontend
+            npm install
+            npm update
+            npm audit fix --audit-level=critical --force
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Analyze back-end
+          command: |
+            cd backend
+            npm update
+            npm audit fix --audit-level=critical --force
 
 #   deploy-infrastructure:
 #     docker:
@@ -289,10 +299,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
