--- a/util/docker-compose.yml
+++ b/util/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   database:
     image: "postgres"
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=glee
+      - POSTGRES_USER=udacity
+      - POSTGRES_PASSWORD=12345678
+      - POSTGRES_DB=udacity
     ports:
       - "5532:5432"
