--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment:
-          WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"     
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail     
 
 #   configure-infrastructure:
 #     docker:
