--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,11 @@ jobs:
               --tags project=udacity-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
               --stack-name "frontend-stack-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+      - run:
+          name: Install tar and gzip
+          command: |
+            yum install tar -y
+            yum install gzip -y 
       # - run:
       #     name: Add back-end ip to ansible inventory
       #     command: |
