--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,7 +195,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run migrations > migration_output.txt
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
@@ -211,13 +211,15 @@ jobs:
 
   # deploy-frontend:
   #   docker:
-  #     # Docker image here that supports AWS CLI
+  #     - image: amazon/aws-cli
   #   steps:
-  #     # Checkout code from git
+  #     - checkout
   #     - run:
   #         name: Install dependencies
   #         command: |
-  #           # your code here
+  #           sudo apt-get -y -qq update
+  #           sudo apt-get -y -qq install python3
+  #           sudo apt-get -qq install awscli
   #     - run:
   #         name: Get backend url
   #         command: |
