--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,9 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: 
+          circleci/node:13.8.0
+          sleavely/node-awscli:14.x
     steps:
       - checkout
       - run:
