--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,9 +218,13 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get -y -qq update
-            sudo apt-get -y -qq install python3
-            sudo apt-get -qq install awscli
+            yum install -y gcc-c++ make
+            yum install sudo -y
+            curl -sL https://rpm.nodesource.com/setup_13.x | sudo -E bash - 
+            yum install -y nodejs
+            yum install -y awscli
+            cd ~/project/frontend
+            npm install
       - run:
           name: Get backend url
           command: |
