--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,6 +204,10 @@ jobs:
       - run:
           name: Run migrations
           command: |
+            sudo apt-get update && sudo apt-get install -yy less
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
             cd ~/project/backend
             npm install
             npm run migrations > migrations_test.txt
