--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,6 +127,7 @@ jobs:
             cd backend
             npm update
             npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical --force
 
   deploy-infrastructure:
     docker:
