--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,9 +220,9 @@ jobs:
             cd ~/project/backend
             npm install
             npm run build
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
+            # npm audit fix --audit-level=critical --force
+            # npm audit fix --audit-level=critical --force
+            # npm audit --audit-level=critical
             npm run migrations >> migrations.txt
             cat migrations.txt
       - run:
