--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,6 +304,8 @@ jobs:
       - image: python:3.7-alpine3.16 
     steps:
       - checkout
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Install dependencies
           command: |
